--- a/work/ux.html
+++ b/work/ux.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Jun 20 2022 14:53:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Fri Mar 31 2023 04:30:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629f1f59a03f078277b7b957" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -11,14 +11,14 @@
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/arthurs-personal-website.webflow.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <!-- <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon"> -->
-  <!-- <link href="../images/webclip.png" rel="apple-touch-icon"> -->
-  <link rel="icon" type="image/svg+xml" href="../images/favicon.svg">
-  <link rel="icon" type="image/png" href="../images/favicon.png">
+  <link href="../images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="../images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div data-w-id="7af02fde-3631-a900-1e61-bf5c9681d2dc" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -29,7 +29,7 @@
           <div class="nav-menu">
             <a href="../index.html" class="nav-link w-nav-link">Home</a>
             <a href="../about.html" class="nav-link w-nav-link">About</a>
-            <a href="https://drive.google.com/file/d/1AbukktH38L2ny-aaEPySJ4uAO_CFpUIl/view?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
+            <a href="https://docs.google.com/document/d/10qsJp2QH7h2edsFe8jsu-SeaxIzKjpkWsQvCqNMaDSM/edit?usp=sharing" target="_blank" class="nav-link w-nav-link">Resume</a>
             <div data-hover="true" data-delay="0" class="nav-link w-dropdown">
               <div class="w-dropdown-toggle">
                 <div class="w-icon-dropdown-toggle"></div>
@@ -38,7 +38,7 @@
               <nav class="dropdown-list w-dropdown-list">
                 <a href="../work/ux.html" aria-current="page" class="nav-link w-dropdown-link w--current">UX</a>
                 <a href="../work/swe.html" class="nav-link w-dropdown-link">SWE</a>
-                <a href="../work/visual-design.html" class="nav-link w-dropdown-link">Visual design</a>
+                <a href="../work/side-projects.html" class="nav-link w-dropdown-link">Side Projects</a>
               </nav>
             </div>
           </div>
@@ -84,7 +84,7 @@
             </div>
             <a href="../work/ux.html" aria-current="page" class="nav-link w-nav-link w--current">UX</a>
             <a href="../work/swe.html" class="nav-link w-nav-link">SWE</a>
-            <a href="../work/visual-design.html" class="nav-link w-nav-link">Visual design</a>
+            <a href="../work/side-projects.html" class="nav-link w-nav-link">Visual design</a>
           </div>
         </div>
         <div class="get-in-touch-nav">
@@ -126,14 +126,14 @@
       </div>
       <div class="spacer-40"></div>
       <div class="card-container w-container">
-        <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="../work/shortform.html" target="_blank" class="image-with-card w-inline-block">
+        <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="../work/upskilling-jobseekers-on-indeed.html" target="_blank" class="image-with-card w-inline-block">
           <div class="overlay-container">
-            <div class="color-overlay"></div><img src="../images/Shortform-thumbnail-4-3.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/Shortform-thumbnail-4-3-p-500.png 500w, ../images/Shortform-thumbnail-4-3-p-800.png 800w, ../images/Shortform-thumbnail-4-3.png 1280w" class="image-card-left">
+            <div class="color-overlay"></div><img src="../images/hero-image-for-skills-tab0.75x.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.15625px" srcset="../images/hero-image-for-skills-tab0.75x-p-500.png 500w, ../images/hero-image-for-skills-tab0.75x-p-800.png 800w, ../images/hero-image-for-skills-tab0.75x-p-1080.png 1080w, ../images/hero-image-for-skills-tab0.75x.png 1201w" class="image-card-left">
           </div>
           <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
             <div class="div-block-2">
-              <h5 class="heading-3">ShortForm</h5>
-              <p class="paragraph">How do we overcome the bad habit of “doom scrolling”?</p>
+              <h5 class="heading-3">Upskilling on Indeed</h5>
+              <p class="paragraph">How do we help people get jobs by identifying and taking action on missing skills?</p>
             </div>
             <div class="resume-div">
               <div class="link-caption">VIEW CASE STUDY</div>
@@ -149,6 +149,21 @@
             <div class="div-block-2">
               <h5 class="heading-3">Balik Kampong</h5>
               <p class="paragraph">How do we preserve heritage in Singapore’s Kampong Bahru area?</p>
+            </div>
+            <div class="resume-div">
+              <div class="link-caption">VIEW CASE STUDY</div>
+              <div class="link-right-arrow">-&gt;</div>
+            </div>
+          </div>
+        </a>
+        <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="../work/shortform.html" target="_blank" class="image-with-card w-inline-block">
+          <div class="overlay-container">
+            <div class="color-overlay"></div><img src="../images/Shortform-thumbnail-4-3.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="../images/Shortform-thumbnail-4-3-p-500.png 500w, ../images/Shortform-thumbnail-4-3-p-800.png 800w, ../images/Shortform-thumbnail-4-3.png 1280w" class="image-card-left">
+          </div>
+          <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
+            <div class="div-block-2">
+              <h5 class="heading-3">ShortForm</h5>
+              <p class="paragraph">How do we overcome the bad habit of “doom scrolling”?</p>
             </div>
             <div class="resume-div">
               <div class="link-caption">VIEW CASE STUDY</div>
