--- a/work/upskilling-jobseekers-on-indeed.html
+++ b/work/upskilling-jobseekers-on-indeed.html
@@ -123,7 +123,7 @@
             <h6 class="what-it-about-h6">what&#x27;s it about?</h6>
           </div>
           <div class="proj-det-content">
-            <p class="metadata-text">A preview of the revamp of the skills tab on Indeed&#x27;s Career Explorer product that empowers jobseekers to understand missing/matching skillsets for a specific occupation. This project is under NDA, full details can be shared over call.</p>
+            <p class="metadata-text">A preview of the revamp of the skills tab on Indeed&#x27;s Career Explorer product that empowers jobseekers to understand missing/matching skillsets for a specific occupation. This project is under NDA, for more details, please get in touch.</p>
             <div class="btw-line"></div>
             <div class="metadata">
               <div class="metadata-hor-line-wrap">
@@ -287,7 +287,7 @@
           <ul role="list">
             <li>6.68% increase in percentage of accounts updating profile</li>
           </ul>
-          <p>Overall, this was an impactful experiment that brought about user value as well as improving key success metrics. However, what made it to production is a subset of all the ideas we wanted to execute. Furthermore, this project is actually a scaled down version of larger scale upskilling vision. These ideas can’t be shared publicly due to NDA but I would be happy to talk about it over call.</p>
+          <p>Overall, this was an impactful experiment that brought about user value as well as improving key success metrics. However, what made it to production is a subset of all the ideas we wanted to execute. Furthermore, this project is actually a scaled down version of larger scale upskilling vision. These ideas can’t be shared publicly due to NDA. To find out more details, please get in touch.</p>
         </div>
       </div>
     </section>
