Update index.html with ibm job role

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="currently">
             <h6 class="currently">CURRENTLY</h6>
             <div class="spacer-8-4"></div>
-            <p class="paragraph-3">Open to new opportunities</p>
+            <p class="paragraph-3">Associate designer at IBM iX</p>
           </div>
         </div>
       </div>
