--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 13:14:40 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 23 2023 14:28:46 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6294d286c1ff63638706fddf" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -15,10 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular","Space Grotesk:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-    <!-- <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"> -->
-  <link rel="icon" type=" image/svg+xml" href="images/favicon.svg">
-  <link rel="icon" type=" image/png" href="images/favicon.png">
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div data-w-id="7af02fde-3631-a900-1e61-bf5c9681d2dc" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -154,7 +152,7 @@
       <div class="card-container w-container">
         <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="work/upskilling-jobseekers-on-indeed.html" target="_blank" class="image-with-card w-inline-block">
           <div class="overlay-container">
-            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="images/hero-image-for-skills-tab0.75x.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.15625px" srcset="images/hero-image-for-skills-tab0.75x-p-500.png 500w, images/hero-image-for-skills-tab0.75x-p-800.png 800w, images/hero-image-for-skills-tab0.75x-p-1080.png 1080w, images/hero-image-for-skills-tab0.75x.png 1201w" class="image-card-left">
+            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="images/hero-image-for-skills-tab0.75x.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, 1vw" srcset="images/hero-image-for-skills-tab0.75x-p-500.png 500w, images/hero-image-for-skills-tab0.75x-p-800.png 800w, images/hero-image-for-skills-tab0.75x-p-1080.png 1080w, images/hero-image-for-skills-tab0.75x.png 1201w" class="image-card-left">
           </div>
           <div class="link-block-shadow">
             <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
