--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 14:28:46 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jul 23 2023 14:36:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6294d286c1ff63638706fddf" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -15,10 +15,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Rubik:regular,600,italic,600italic","Inter:regular","Space Grotesk:300,regular,500,600,700"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <!-- <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon"> -->
-  <link rel="icon" type=" image/svg+xml" href="images/favicon.svg">
-  <link rel="icon" type=" image/png" href="images/favicon.png">
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
 <body>
   <div data-w-id="7af02fde-3631-a900-1e61-bf5c9681d2dc" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
@@ -229,7 +227,7 @@
   </div>
   <div class="spacer-88-40"></div>
   <div class="medium-cards-section wf-section">
-    <div class="content-container">
+    <div data-w-id="00a7c5c2-5343-9790-816f-74ea8a99a72d" style="opacity:0" class="content-container">
       <div class="line-header medium-line-header">
         <div class="topline"></div>
         <h5 class="all-caps">Ramblings on <a href="https://medium.com/@artlee06" target="_blank" class="link">Medium</a>
