Updates with the new coming soon medium article

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 14:36:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 19 2023 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629f103803132a92ed0b65bf" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -112,7 +112,7 @@
       </div>
     </div>
   </div>
-  <div class="about-section wf-section">
+  <div class="about-section">
     <div class="spacer-52-24-16"></div>
     <div class="horizontal-padded-container">
       <div class="w-layout-grid _2-col-grid-about">
@@ -147,7 +147,7 @@
       </div>
     </div>
   </div>
-  <footer id="footer" class="footer wf-section">
+  <footer id="footer" class="footer">
     <div data-w-id="c6506610-1489-fe28-3232-e6ef00dad030" style="opacity:0" class="footer-outer-container w-container">
       <div class="footer-spacer-40"></div>
       <div class="footer-flex-container">
