--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 14:36:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 19 2023 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6294d286c1ff63638706fddf" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -110,7 +110,7 @@
       </div>
     </div>
   </div>
-  <div class="hero-section wf-section">
+  <div class="hero-section">
     <div class="spacer-52-24-16"></div>
     <div class="horizontal-padded-container">
       <div class="w-layout-grid _2-col-grid">
@@ -144,7 +144,7 @@
     </div>
   </div>
   <div class="spacer-88-40"></div>
-  <div class="featured-section wf-section">
+  <div class="featured-section">
     <div class="content-container">
       <div class="line-header featured-work">
         <div class="topline"></div>
@@ -154,7 +154,7 @@
       <div class="card-container w-container">
         <a data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11662" href="work/upskilling-jobseekers-on-indeed.html" target="_blank" class="image-with-card w-inline-block">
           <div class="overlay-container">
-            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="images/hero-image-for-skills-tab0.75x.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, 1vw" srcset="images/hero-image-for-skills-tab0.75x-p-500.png 500w, images/hero-image-for-skills-tab0.75x-p-800.png 800w, images/hero-image-for-skills-tab0.75x-p-1080.png 1080w, images/hero-image-for-skills-tab0.75x.png 1201w" class="image-card-left">
+            <div data-w-id="ee0a7e53-96f7-c7dc-c57f-388360a117f4" class="color-overlay"></div><img src="images/hero-image-for-skills-tab_tinypng.png" loading="lazy" height="480" alt="" sizes="(max-width: 479px) 100vw, (max-width: 991px) 76vw, 639.328125px" srcset="images/hero-image-for-skills-tab_tinypng-p-500.png 500w, images/hero-image-for-skills-tab_tinypng-p-800.png 800w, images/hero-image-for-skills-tab_tinypng-p-1080.png 1080w, images/hero-image-for-skills-tab_tinypng.png 1600w" class="image-card-left">
           </div>
           <div class="link-block-shadow">
             <div data-w-id="3404a95b-f46e-6b7a-e777-315c5ed11664" class="link-block-right">
@@ -228,7 +228,7 @@
     </div>
   </div>
   <div class="spacer-88-40"></div>
-  <div class="medium-cards-section wf-section">
+  <div class="medium-cards-section">
     <div data-w-id="00a7c5c2-5343-9790-816f-74ea8a99a72d" style="opacity:0" class="content-container">
       <div class="line-header medium-line-header">
         <div class="topline"></div>
@@ -237,6 +237,20 @@
       </div>
       <div class="spacer-24-12"></div>
       <div class="medium-cards">
+        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://artlee06.medium.com/" target="_blank" class="medium-card-and-shadow w-inline-block">
+          <div class="medium-card"><img src="images/watsonx-challenge-Desktop-header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/watsonx-challenge-mobile-header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/watsonx-challenge-mobile-header-p-500.png 500w, images/watsonx-challenge-mobile-header.png 520w" class="mob-image-header">
+            <div class="medium-card-bottom-section">
+              <div class="div-block-11 div-block-12 div-block-13">
+                <h5 class="medium-header">[Coming soon] Empowering user research with Generative AI</h5>
+                <div class="text-block-6">? min read</div>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">Monitor my medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="brutalist-shadow"></div>
+        </a>
         <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://medium.com/design-bootcamp/designing-a-karaoke-experience-for-apple-vision-pro-c5b7e2b0b776" target="_blank" class="medium-card-and-shadow w-inline-block">
           <div class="medium-card"><img src="images/SpotifyVisionPro-sized-small.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/spotify-mob-image-header-small.png" loading="lazy" height="" alt="" class="mob-image-header">
             <div class="medium-card-bottom-section">
@@ -275,7 +289,7 @@
     </div>
   </div>
   <div class="spacer-88-40"></div>
-  <footer id="footer" class="footer wf-section">
+  <footer id="footer" class="footer">
     <div data-w-id="64d99124-19f9-7291-3144-dda18a9eee2d" style="opacity:0" class="footer-outer-container w-container">
       <div class="footer-spacer-40"></div>
       <h2 class="thank-you-heading"><span class="text-span-2">Thank you</span> for visiting my portfolio!</h2>
