--- a/work/side-projects.html
+++ b/work/side-projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 14:36:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 19 2023 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="629f7a9d51b09f7151f1312e" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -111,7 +111,7 @@
       </div>
     </div>
   </div>
-  <div class="hero-section wf-section">
+  <div class="hero-section">
     <div class="spacer-52-24-16"></div>
     <div class="horizontal-padded-container">
       <div class="w-layout-grid _2-col-grid">
@@ -131,7 +131,7 @@
     </div>
   </div>
   <div class="spacer-88-40"></div>
-  <div class="featured-section wf-section">
+  <div class="featured-section">
     <div class="content-container">
       <div class="line-header featured-work">
         <div class="topline"></div>
@@ -196,7 +196,7 @@
       </div>
     </div>
   </div>
-  <footer id="footer" class="footer wf-section">
+  <footer id="footer" class="footer">
     <div data-w-id="12421fc9-52d7-b845-90d6-0f7999776eac" style="opacity:0" class="footer-outer-container w-container">
       <div class="footer-spacer-40"></div>
       <div class="spacer-32"></div>
