--- a/work/safespace.html
+++ b/work/safespace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sun Jul 23 2023 14:36:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Aug 19 2023 13:57:55 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62a2d4d3649b28081404934d" data-wf-site="6294d286c1ff6311cc06fdda">
 <head>
   <meta charset="utf-8">
@@ -111,7 +111,7 @@
       </div>
     </div>
   </div>
-  <div class="title-section wf-section">
+  <div class="title-section">
     <div class="w-layout-grid content-2-col-grid">
       <div id="w-node-_82540ea5-8ba3-1d92-88b3-16dfce0ae56c-1404934d" class="content-page-wrapper">
         <h2 id="heading" data-w-id="82540ea5-8ba3-1d92-88b3-16dfce0ae572" class="heading-6"><span class="text-span-5">SafeSpace</span>, a solution for VR Mental Health<span class="text-span-4"></span></h2>
@@ -121,7 +121,7 @@
     </div>
     <div class="spacer-52-24-16"></div>
   </div>
-  <div class="content-section wf-section">
+  <div class="content-section">
     <section id="proj-details" class="content-h1-section">
       <div class="contentpage-content-container">
         <div class="content-line-header">
@@ -220,7 +220,7 @@
     </section>
   </div>
   <div class="spacer-40"></div>
-  <footer id="footer" class="content-page-footer wf-section">
+  <footer id="footer" class="content-page-footer">
     <div class="image-bg">
       <div class="next-card-container">
         <a href="../work/giftwrap.html" target="_blank" class="link-block-next pd-outline w-inline-block">
