--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="medium-card"><img src="images/watsonx-challenge-Desktop-header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/watsonx-challenge-mobile-header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/watsonx-challenge-mobile-header-p-500.png 500w, images/watsonx-challenge-mobile-header.png 520w" class="mob-image-header">
             <div class="medium-card-bottom-section">
               <div class="div-block-11 div-block-12 div-block-13">
-                <h5 class="medium-header">[Coming soon] Empowering user research with Generative AI</h5>
+                <h5 class="medium-header">[Coming soon] Empowering user research with generative AI</h5>
                 <div class="text-block-6">? min read</div>
               </div>
               <div class="resume-div">
