Update with medium article

--- a/index.html
+++ b/index.html
@@ -237,15 +237,15 @@
       </div>
       <div class="spacer-24-12"></div>
       <div class="medium-cards">
-        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://artlee06.medium.com/" target="_blank" class="medium-card-and-shadow w-inline-block">
+        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://artlee06.medium.com/empowering-user-research-with-generative-ai-66f9b52c1da3" target="_blank" class="medium-card-and-shadow w-inline-block">
           <div class="medium-card"><img src="images/watsonx-challenge-Desktop-header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/watsonx-challenge-mobile-header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/watsonx-challenge-mobile-header-p-500.png 500w, images/watsonx-challenge-mobile-header.png 520w" class="mob-image-header">
             <div class="medium-card-bottom-section">
               <div class="div-block-11 div-block-12 div-block-13">
-                <h5 class="medium-header">[Coming soon] Empowering user research with generative AI</h5>
-                <div class="text-block-6">? min read</div>
+                <h5 class="medium-header"> Empowering user research with generative AI</h5>
+                <div class="text-block-6">6 min read</div>
               </div>
               <div class="resume-div">
-                <div class="link-caption">Monitor my medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
+                <div class="link-caption">Read on medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
               </div>
             </div>
           </div>
