Update job titles

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
           <div class="previously">
             <h6 class="previously">PREVIOUSLY</h6>
             <div class="spacer-8-4"></div>
-            <p class="paragraph">Associate UX Designer at Indeed</p>
+            <p class="paragraph">Associate designer at IBM</p>
           </div>
           <div class="currently">
             <h6 class="currently">CURRENTLY</h6>
             <div class="spacer-8-4"></div>
-            <p class="paragraph-3">Associate designer at IBM iX</p>
+            <p class="paragraph-3">UX designer at GovTech Singapore</p>
           </div>
         </div>
       </div>
