Adds 2 case studies

--- a/index.html
+++ b/index.html
@@ -237,6 +237,34 @@
       </div>
       <div class="spacer-24-12"></div>
       <div class="medium-cards">
+        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://artlee06.medium.com/i-designed-an-interior-design-app-for-spatial-computing-extended-reality-62865c8decf4" target="_blank" class="medium-card-and-shadow w-inline-block">
+          <div class="medium-card"><img src="images/XRID_hero_image_desktop.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/XRID_hero_image_mobile.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/XRID_hero_image_mobile.png 500w, images/XRID_hero_image_mobile.png 520w" class="mob-image-header">
+            <div class="medium-card-bottom-section">
+              <div class="div-block-11 div-block-12 div-block-13">
+                <h5 class="medium-header">I made an XR prototype with Figma and Bezel</h5>
+                <div class="text-block-6">8 min read</div>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">Read on medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="brutalist-shadow"></div>
+        </a>
+        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://medium.com/design-bootcamp/my-exploration-of-emerging-tech-in-interior-design-the-research-bits-988554c7c019" target="_blank" class="medium-card-and-shadow w-inline-block">
+          <div class="medium-card"><img src="images/XRID_wireframe_desktop.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/XRID_wireframe_mobile.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/XRID_wireframe_mobile.png 500w, images/XRID_wireframe_mobile.png 520w" class="mob-image-header">
+            <div class="medium-card-bottom-section">
+              <div class="div-block-11 div-block-12 div-block-13">
+                <h5 class="medium-header">My Exploration of Emerging Tech in Interior Design: The Research Bits</h5>
+                <div class="text-block-6">8 min read</div>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">Read on medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="brutalist-shadow"></div>
+        </a>
         <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://artlee06.medium.com/i-made-an-xr-prototype-with-figma-and-bezel-627c4c37e0cf" target="_blank" class="medium-card-and-shadow w-inline-block">
           <div class="medium-card"><img src="images/XR-prototype-Desktop-header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/XR-prototype-mobile-header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/XR-prototype-mobile-header.png 500w, images/XR-prototype-mobile-header.png 520w" class="mob-image-header">
             <div class="medium-card-bottom-section">
