--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <div class="medium-card"><img src="images/XRID_hero_image_desktop.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/XRID_hero_image_mobile.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/XRID_hero_image_mobile.png 500w, images/XRID_hero_image_mobile.png 520w" class="mob-image-header">
             <div class="medium-card-bottom-section">
               <div class="div-block-11 div-block-12 div-block-13">
-                <h5 class="medium-header">I made an XR prototype with Figma and Bezel</h5>
+                <h5 class="medium-header">I designed an interior design app for spatial computing/extended reality</h5>
                 <div class="text-block-6">8 min read</div>
               </div>
               <div class="resume-div">
