Add Focustime medium article

--- a/index.html
+++ b/index.html
@@ -237,6 +237,20 @@
       </div>
       <div class="spacer-24-12"></div>
       <div class="medium-cards">
+        <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://bootcamp.uxdesign.cc/i-joined-an-xr-design-competition-dec012f9f3b5" target="_blank" class="medium-card-and-shadow w-inline-block">
+          <div class="medium-card"><img src="images/FocusTime prototype Desktop header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/FocusTime prototype mobile header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/FocusTime prototype mobile header.png 500w, images/FocusTime prototype mobile header.png 520w" class="mob-image-header">
+            <div class="medium-card-bottom-section">
+              <div class="div-block-11 div-block-12 div-block-13">
+                <h5 class="medium-header">I joined an XR design competition</h5>
+                <div class="text-block-6">6 min read</div>
+              </div>
+              <div class="resume-div">
+                <div class="link-caption">Read on medium</div><img src="images/iconoir_open-new-window.svg" loading="lazy" alt="">
+              </div>
+            </div>
+          </div>
+          <div class="brutalist-shadow"></div>
+        </a>
         <a data-w-id="47a0f561-ea20-3756-b2b8-0aa572fc72bb" href="https://medium.com/design-bootcamp/i-created-a-prototype-on-unity-for-xr-design-b8a030486e53" target="_blank" class="medium-card-and-shadow w-inline-block">
           <div class="medium-card"><img src="images/Unity prototype Desktop header.png" loading="lazy" height="" alt="" class="desk-image-header"><img src="images/Unity prototype mobile header.png" loading="lazy" height="" alt="" sizes="(max-width: 479px) 100vw, (max-width: 767px) 86vw, 516px" srcset="images/Unity prototype mobile header.png 500w, images/Unity prototype mobile header.png 520w" class="mob-image-header">
             <div class="medium-card-bottom-section">
